--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -17,7 +17,8 @@
         </div>
         <!-- Classic tabs -->
         <div class="tab-content p-0" id="myClassicTabContent">
-          <div class="tab-pane fade active show" id="profile-classic" role="tabpanel" aria-labelledby="home-tab-classic" data-step data-index="1" data-onboarding-content="Welcome to your editor dashboard! Articles you're reviewing will show up here.">
+         <div class="tab-pane fade active show" id="profile-classic" role="tabpanel" aria-labelledby="home-tab-classic">
+          <div data-step data-index="1" data-onboarding-content="Welcome to your editor dashboard! Articles you're reviewing will show up here.">
             <h5 class="pitch_ttl">Drafts You're Reviewing</h5>
             <% @editors_reviews.each do |draft| %>
               <div class="flex--postlist--item review_items pl-0">
@@ -102,6 +103,7 @@
               <% end %>
             </div>
           </div>
+        </div>
         <div class="tab-pane fade" id="follow-classic" role="tabpanel" aria-labelledby="activity-tab-classic">
           <h5 class="pitch_ttl">All Editor Activity</h5>
           <%= render_async_cache get_editor_activity_path, toggle: { selector: '#activity-tab-classic', event: :click } do %>
@@ -223,7 +225,7 @@
   });
 </script>
 
-<% if @show_editor_dashboard_onboarding %>
+<% if true %>
   <%= javascript_include_tag "mdbootstrap/mdb.min" %>
   <%= javascript_include_tag "plugins/onboarding.min" %>
   <script type="text/javascript">
