--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -3,7 +3,7 @@ pintrk('track', 'pagevisit');
 </script>
 
 <!-- let someone create an application; sends to editor -->
-<div id="apply_image"></div>
+<%= image_tag "writer.jpg", id: "banner_writing" %>
 <div class="apply_wrapper">
   <h2>Apply to The Teen Magazine Writer Team</h2>
   <p>
